<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Practica3a</string>
    <string name="introduzca_numero">Introduzca un Numero</string>
    <string name="yourTextHere">Ingrese su texto aqui</string>
    <string name="myButton">Boton</string>
    <string name="recordar">Recordar</string>
    <string name="manana">Mañana</string>
    <string name="tarde">Tarde</string>
    <string name="nocturno">Nocturno</string>
    <string name="mostrar">Mostrar</string>
    <string name="mySwitch">Switch</string>
    <string name="myToggleButton">ToggleButton</string>
    <string name="myRadioButton2">RadioButton2</string>
    <string name="myRadioButton1" tools:ignore="Typos">RadioButton1</string>
    <string name="myCheckBox">CheckBox</string>
    <string name="snackbar">SnackBar</string>
    <string name="introduzca_su_nombre">Introduzca su nombre</string>
    <string name="boton_mostrar">Mostrar</string>
    <string name="snackbar_accion">SnackBar Accion</string>
</resources>